@@ -2,6 +2,12 @@
 Change Log
 -----------
 
+Not yet released:
+
+  - Removed usage of ereg() function, which no longer exists in PHP 6.
+  - BUGFIX: Fixed issue parsing the HTTP_ACCEPT_LANGUAGE header which resulted in the
+    country part being ignored (so for example, 'en-US' would be stripped to just 'en'.)
+
 Version 1.4:
 
   - PHP-Mesh now supports multi-language decorators.  A decorator called "default" will
